fix end of content spacing

--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -53,7 +53,7 @@
 
 .data-graph--container {
   display: grid; // this allows use of <p> margin
-  margin: 1rem 0;
+  margin: 1rem 0 0;
   padding: 0 1rem;
   outline: 1px solid $theme-color-primary-light;
   border-radius: 4px;
